--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 }
 
 main{    
-    width: 730px;
+    max-width: 730px;
     margin: 50px auto;
     display: flex;
     align-items: center;
@@ -37,9 +37,12 @@ button:hover{
 .section2{
     background-color: rgb(255, 255, 255, 0.2);
     border-radius: 0 8px 8px 0;
-    width: 250px;
+    width: 220px;
     height: 460px;
     padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .section2 div{
@@ -49,7 +52,7 @@ button:hover{
 
 .estadisticas{
     border: 1px solid white;
-    height: 105px;
+    height: 70px;
     border-radius: 8px;
     padding: 8px 20px;
     box-sizing: border-box;    
@@ -60,13 +63,17 @@ button:hover{
     width: 200px;
     height: 50px;
     background-color: white;
-    color: black;    
+    color: black;
+    border: 1px solid white;
+    border-radius: 5px;
+    transition: all 300ms;    
 
 }
 
 .reiniciar:hover{
     background-color: black;
-    color: white;    
+    color: white;
+    border: 1px solid black;    
 } 
 
 footer{
@@ -75,4 +82,22 @@ footer{
 
 a{
     text-decoration: none;
+}
+
+@media (max-width: 768px) {
+    main {
+        flex-direction: column;
+        justify-content: center;
+    }
+    .section1{
+        width: 90%;        
+        display: flex;
+        flex-direction: column;
+        align-items: center;       
+    }
+    .section2{
+        width: 87%;
+        border-radius: 5px;
+        margin-top: 10px;
+    }
 }
