--- a/style.css
+++ b/style.css
@@ -95,6 +95,13 @@ a{
         flex-direction: column;
         align-items: center;       
     }
+    button{
+        width: 80px;
+        height: 80px;
+        font-size: 30px;
+        color: white;
+        font-weight: bold;
+    }
     .section2{
         width: 87%;
         border-radius: 5px;
