--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@ a{
     main {
         flex-direction: column;
         justify-content: center;
-    }
+        margin: 0 auto;
+    }    
     .section1{
         width: 90%;        
         display: flex;
@@ -102,9 +103,18 @@ a{
         color: white;
         font-weight: bold;
     }
+    .reiniciar{
+        margin-bottom: 10px;
+    }
     .section2{
         width: 87%;
         border-radius: 5px;
         margin-top: 10px;
+        height: auto;
+        padding: 10px auto;
+    }
+    .estadisticas{
+        margin: 5px;
+        height: 50px;
     }
 }
